--- a/src/App.css
+++ b/src/App.css
@@ -181,3 +181,12 @@ section {
   transform: scale(1.1);
   transition: all 0.2s ease-in-out;
 }
+
+/****************************
+ Spinner Styles
+*****************************/
+
+.spinner {
+  text-align: center;
+  margin-top: 20px;
+}
