--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ section {
 
 .items {
   background-color: #ffffff;
-  width: 350px;
+  width: 300px;
   height: 450px;
 }
 
@@ -109,6 +109,11 @@ section {
   background-color: inherit;
   color: #999faa;
   font-size: 16px;
+}
+
+.user-content{
+  display: flex;
+  justify-content: space-between;
 }
 
 /****************************
