--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@ section {
   font-size: 16px;
 }
 
-.user-content{
+.user-content {
   display: flex;
   justify-content: space-between;
 }
@@ -185,6 +185,14 @@ section {
 .pagination button:hover {
   transform: scale(1.1);
   transition: all 0.2s ease-in-out;
+}
+
+.login-message {
+  width: 500px;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 600;
+  margin: 0 auto;
 }
 
 /****************************
